# rag_jira_search

./: .env  .gitignore  app.py  manual_test.py  pyproject.toml
dummy/: check_env.py  test_jira_connection.py
src/: config.py  jira_utils.py  main.py  rag.py
templates/: index.html
tests/: test_config.py  test_jira_utils.py  test_main.py  test_rag.py
